engine/tests/fixtures/invalid/http-api-semantics/cap-status.tg
capability cap_get_task_export_job {
  name "Get Export Job"
  description "Fetches status"

  actors [actor_user]
  reads [entity_task]
  input [shape_input_get_task_export_job]
  output [shape_output_task_export_status]

  status active
}
